[gd_scene load_steps=9 format=3 uid="uid://dfc1o1ie3dtri"]

[ext_resource type="Script" uid="uid://tbq8rsh6dnxc" path="res://scripts/items/01_Bedroom/phone.gd" id="1_1n8gy"]
[ext_resource type="Texture2D" uid="uid://dykj0qojly86a" path="res://assets/01_Sprites/03_Items/01_Bedroom/phone_spritesheet.png" id="1_xixmg"]

[sub_resource type="Animation" id="Animation_1n8gy"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("phone_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_b5ov6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("phone_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k4e56"]
resource_name = "glow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("phone_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cnyso"]
_data = {
&"RESET": SubResource("Animation_b5ov6"),
&"glow": SubResource("Animation_k4e56"),
&"idle": SubResource("Animation_1n8gy")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_k4e56"]
radius = 170.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b5ov6"]
radius = 67.2036

[node name="phone" type="Node2D"]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_1n8gy")

[node name="phone_sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_xixmg")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cnyso")
}
autoplay = "idle"

[node name="ItemZone" type="Area2D" parent="."]

[node name="ItemZone" type="CollisionShape2D" parent="ItemZone"]
shape = SubResource("CircleShape2D_k4e56")
debug_color = Color(1, 1, 0, 0.419608)

[node name="InteractZone" type="Area2D" parent="."]

[node name="InteractZone" type="CollisionShape2D" parent="InteractZone"]
shape = SubResource("CircleShape2D_b5ov6")

[connection signal="body_entered" from="ItemZone" to="." method="_on_item_zone_body_entered"]
[connection signal="body_exited" from="ItemZone" to="." method="_on_item_zone_body_exited"]
[connection signal="body_entered" from="InteractZone" to="." method="_on_interact_zone_body_entered"]
[connection signal="body_exited" from="InteractZone" to="." method="_on_interact_zone_body_exited"]
